--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "eslint": "^8.0.1",
     "homebridge": "^1.3.5",
     "nodemon": "^2.0.13",
+    "ping": "0.4.2",
     "rimraf": "^3.0.2",
     "ts-node": "^10.3.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "wake_on_lan": "1.0.0"
   }
 }
