--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,9 +6,11 @@
             "type": "node",
             "request": "launch",
             // Debian Docker
-            //"program": "/usr/local/share/npm-global/bin/homebridge",
+            "program": "/usr/local/share/npm-global/bin/homebridge",
             // macOS
-            "program": "/usr/local/bin/homebridge",
+            "osx": {
+                "program": "/usr/local/bin/homebridge"
+            },
             "args": "-D",
             "preLaunchTask": "build",
             "skipFiles": [
