--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "jvctv",
     "remote"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "ping": "0.4.2",
+    "wake_on_lan": "1.0.0"
+  },
   "devDependencies": {
     "@types/node": "^16.10.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -38,10 +41,8 @@
     "eslint": "^8.0.1",
     "homebridge": "^1.3.5",
     "nodemon": "^2.0.13",
-    "ping": "0.4.2",
     "rimraf": "^3.0.2",
     "ts-node": "^10.3.0",
-    "typescript": "^4.4.4",
-    "wake_on_lan": "1.0.0"
+    "typescript": "^4.4.4"
   }
 }
