--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,7 @@
     "source.fixAll.eslint": true
   },
   "editor.rulers": [ 140 ],
+  "editor.tabSize": 2,
+  "editor.insertSpaces": true,
   "eslint.enable": true
 }
